--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
     text-align: center;
+    align-items: center;
 }
 
 .App-logo {
@@ -36,4 +37,15 @@
     to {
         transform: rotate(360deg);
     }
+}
+
+.ordered-list {
+    list-style-position: inside;
+    padding: 0;
+}
+
+.rectangle {
+    width: 50px;
+    height: 25px;
+    background-color: red;
 }
